# switchline

./: .gitignore  Makefile  README.md
api/: pyproject.toml  requirements.txt
api/api/: models.py  projects_controller.py  schema.py  services_controller.py  user_controller.py
api/api/migrations/: 0001_initial.py
api/config/: settings.py  urls.py
frontend/: Caddyfile  Dockerfile  package.json
frontend/deployment/: server-entrypoint.sh
frontend/src/: App.tsx  main.tsx  routes.tsx  theme.ts  utils.ts
frontend/src/Components/: DockerImage.tsx  Navbar.tsx
frontend/src/Pages/: ComingSoon.tsx  Home.tsx
frontend/src/Pages/Dashboard/: Dashboard.tsx  ServiceForm.tsx  ServiceGrid.tsx  ServiceModal.tsx
frontend/src/Pages/DocGen/: DocGen.tsx
frontend/src/api/: client.ts  models.ts  projects.ts  services.ts
frontend/src/api/types/: api-schema.json  schema.ts
scripts/: ts-codegen.sh
